fixing the project image alignment

--- a/style.css
+++ b/style.css
@@ -342,6 +342,12 @@ Responsive styles
         display: block;
         width: 100%;
     }
+    projects-container .projects-column img {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
     footer i {
         font-size: 2.5rem;
     }
